@@ -7,6 +7,7 @@ import info.bitrich.xchangestream.core.StreamingExchange;
 import info.bitrich.xchangestream.core.StreamingMarketDataService;
 import info.bitrich.xchangestream.service.netty.StreamingObjectMapperHelper;
 import io.reactivex.Completable;
+import io.reactivex.Observable;
 import org.knowm.xchange.ExchangeSpecification;
 import org.knowm.xchange.currency.Currency;
 import org.knowm.xchange.currency.CurrencyPair;
@@ -54,7 +55,7 @@ public class PoloniexStreamingExchange extends PoloniexExchange implements Strea
 
                 String[] currencies = pairSymbol.split("_");
                 CurrencyPair currencyPair = new CurrencyPair(new Currency(currencies[1]), new Currency(currencies[0]));
-                currencyPairMap.put(currencyPair, new Integer(id));
+                currencyPairMap.put(currencyPair, Integer.valueOf(id));
             }
         } catch (IOException e) {
             e.printStackTrace();
@@ -71,6 +72,11 @@ public class PoloniexStreamingExchange extends PoloniexExchange implements Strea
     @Override
     public Completable disconnect() {
         return streamingService.disconnect();
+    }
+
+    @Override
+    public Observable<Object> connectionIdle() {
+        return streamingService.subscribeIdle();
     }
 
     @Override
@@ -93,4 +99,13 @@ public class PoloniexStreamingExchange extends PoloniexExchange implements Strea
 
     @Override
     public void useCompressedMessages(boolean compressedMessages) { streamingService.useCompressedMessages(compressedMessages); }
+    
+    @Override
+    public Observable<Object> connectionSuccess() {
+        return streamingService.subscribeConnectionSuccess();
+    }
+    @Override
+    public Observable<Throwable> reconnectFailure() {
+        return streamingService.subscribeReconnectFailure();
+    }
 }
